syntax = "proto3";

package testing;

option java_package = "com.google.protobuf.kotlin.protoc.testproto";

message HasOuterClassNameConflict {}
